<resources>
    <string name="app_name">Twitter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rose_user"> "@roseannepics"</string>

    <string name="gpt_user"> "@gptFAKE"</string>

    <string name="noti_content1">"<b>SmenderTheDesinger</b> has a new Tweet!"</string>

    <string name="noti_content1.1">"Creating meaningful experiences: an Introduction to User Experience design

#ux #uxdesign #uxresearch #webdesign #design  " </string>

    <string name="noti_content2">"<b>Sigma</b> and 2 others followed you </string>

    <string name="bookmark_head">Bookmark the post for watching later</string>

    <string name="bookmark_content">Bookmark posts snd make it easy to watch later</string>

    <string name="list_header">Discover new list</string>

    <string name="my_list">Your list</string>

    <string name="more_op">More</string>

    <string name="no_list">You have not created or followed any Lists. When you do that, those lists will appear here</string>

    <string name="premium_title">Premium</string>

    <string name="premium_month">Month</string>

    <string name="premium_year">Year</string>

    <string name="premium_content1">Premium subcribers
                                    with a verified phone
                                    number will get a blue
                                    checkmark once
                                    approved.

    </string>

    <string name="premium_content3">Premium</string>

    <string name="premium_content2"><u>Show more</u></string>

    <string name="profile_user_name">"User_Name"</string>

    <string name="profile_user_tagname">"@user_name"</string>

    <string name="profile_following"><b>200</b> Following </string>

    <string name="profile_followers"><b>50</b> Followers </string>

    <string name="pinned_tweet">Pinned Tweet</string>

    <string name="profile_tweet_date">&#8226; 19/9/23</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rose_user"> "@roseannepics"</string>

    <string name="gpt_user"> "@gptFAKE"</string>

    <string name="noti_content1">"<b>SmenderTheDesinger</b> has a new Tweet!"</string>

    <string name="noti_content1.1">"Creating meaningful experiences: an Introduction to User Experience design

#ux #uxdesign #uxresearch #webdesign #design  " </string>

    <string name="noti_content2">"<b>Sigma</b> and 2 others followed you </string>

    <string name="bookmark_head">Bookmark the post for watching later</string>

    <string name="bookmark_content">Bookmark posts snd make it easy to watch later</string>

    <string name="list_header">Discover new list</string>

    <string name="my_list">Your list</string>

    <string name="more_op">More</string>

    <string name="no_list">You have not created or followed any Lists. When you do that, those lists will appear here</string>

    <string name="premium_title">Premium</string>

    <string name="premium_user">"@Hiep1612"</string>

    <string name="premium_month">Month</string>

    <string name="premium_year">Year</string>

    <string name="premium_content1">Premium subcribers
                                    with a verified phone
                                    number will get a blue
                                    checkmark once
                                    approved.

    </string>

    <string name="premium_content3">Premium</string>

    <string name="premium_content2"><u>Show more</u></string>

    <!--profile bar-->
    <string name="app_name">TwitterProject</string>
    <string name="user_name">Pixsellz</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="smallpixsellz">@pixsellz</string>
    <string name="joined_date">Joined July 2023</string>
    <string name="number_following">1</string>
    <string name="number_followers">2</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <!--tabs bar-->
    <string name="posts">Posts</string>
    <string name="replies">Replies</string>
    <string name="highlights">Highlights</string>
    <string name="media">Media</string>
    <string name="likes">Likes</string>
    <!--posts-->
    <string name="pixsellz_7_">@pixsellz 2/3/23</string>
    <string name="scheme_cons">Scheme Constructor - your ultimate prototyping kit for all  UX web
     and mobileepp desgin!</string>
    <string name="pinned_tweet">Pinned Tweet</string>
    <string name="constructor">constructor.pixesellz.io</string>
    <string name="prototyping">#prototyping #wireframe #uiux #ux</string>
    <string name="views">109 views</string>
    <string name="some_id">0:11</string>
    <string name="comment_num">2</string>
    <string name="retweet_num">2</string>
    <string name="tweet_likes">15</string>

    <!--replies-->
    <string name="must_have_i">Must have icon collection</string>
    <string name="the_best_fr">The Best Free Icon Packs Everyone Must Download i...</string>
    <string name="graphic_mama">graphicmama.com</string>
    <!--media-->
    <string name="freebie_ale">Freebie Alert! ⚠ Mobile Apps Library consists of 120+ reconstructed screens of four popular mobile apps.</string>
    <string name="download">Download:</string>
    <string name="dowload_app">apps.pixsellz.io</string>
    <string name="freebie_uid">#freebie #uidesign #whatsapp #messenger #instagram #sketchapp #figma</string>
    <!--likes-->
    <string name="komol_kuchk">Komol Kuchkarov</string>
    <string name="kkuchkarov_">@kkuchkarov· 6d</string>
    <string name="when_we_fir">When we first launched Vector Mockups, I had wrote that in 2018 our free product downloads was 28K+ and we had set a goal to double this figure by the end of 2019. Today our team and I are glad to announce tgat we aave easily hit our goals with 47k+ downloads in 2019.</string>
    <!--content discription-->
    <string name="small_profile">small profile</string>
    <string name="back_icon">back icon</string>
    <string name="search_icon">search icon</string>
    <string name="option_icon">option icon</string>
    <string name="profile_img">profile image</string>
    <string name="activity_icon">activity icon</string>
    <string name="comment_icon">comment icon</string>
    <string name="retweet_icon">retweet icon</string>
    <string name="heart_icon">heart icon</string>
    <string name="share_icon">share icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="pin_soild_i">pin solid</string>

</resources>