<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="50dp"
    android:layout_height="200dp"
    android:background="@color/main_color"
    android:paddingLeft="20dp"
    android:layout_marginTop="30dp">

    <ImageButton
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/round_button"
        android:clipToOutline="true"
        android:scaleType="fitCenter"
        android:src="@drawable/user6" />

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/nav_usertagname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_user_tagname"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:id="@+id/profile_follow"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/profile_following">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/profile_followers">

        </TextView>
    </LinearLayout>
</LinearLayout>