<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".PostProfileFragment">
            <RelativeLayout
                android:id="@+id/tweetbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:contentDescription="@string/small_profile"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/user6"
                    />

                <TextView
                    android:id="@+id/pinned_twee"
                    android:layout_width="87dp"
                    android:layout_height="17dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="11dp"
                    android:text="@string/pinned_tweet"
                    android:textAppearance="@style/profle_detail"/>

                <TextView
                    android:id="@+id/pixsellz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/profile_user_name"
                    android:gravity="top"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/pixsellz_2_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="160dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/pixsellz_7_"
                    android:gravity="top"
                    android:textAppearance="@style/profle_detail"/>

                <TextView
                    android:id="@+id/scheme_cons"
                    android:layout_width="261dp"
                    android:layout_height="62dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="51dp"
                    android:text="@string/scheme_cons"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.7sp"
                    android:gravity="top"
                    android:textAppearance="@style/profle_detail"/>

                <TextView
                    android:id="@+id/constructor"
                    android:layout_width="160dp"
                    android:layout_height="21dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="112dp"
                    android:text="@string/constructor"
                    android:lineSpacingExtra="1sp"
                    android:translationY="-0.7sp"
                    android:gravity="top"
                    android:textAppearance="@style/constructor"/>
                <TextView
                    android:id="@+id/prototyping"
                    android:layout_width="256dp"
                    android:layout_height="21dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="160dp"
                    android:text="@string/prototyping"
                    android:gravity="top"
                    android:textAppearance="@style/constructor"/>

                <ImageView
                    android:id="@+id/rectangle"
                    android:layout_width="311dp"
                    android:layout_height="175dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="183dp"
                    android:src="@drawable/uiux_pro"/>

                <TextView
                    android:id="@+id/views"
                    android:layout_width="64dp"
                    android:layout_height="21dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="83dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="364dp"
                    android:text="@string/views"
                    android:lineSpacingExtra="4sp"
                    android:translationY="-1.9sp"
                    android:gravity="top"
                    android:textAppearance="@style/profle_detail"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/pin_soild_i"
                        android:id="@+id/pin_solid_i"
                        android:layout_width="9.73dp"
                        android:layout_height="11.73dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="63dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="13.5dp"
                        android:src="@drawable/pin_solid_icon_pro"
                        />
                    <View
                        android:id="@+id/down_arrow_"
                        android:layout_width="12dp"
                        android:layout_height="6dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="37dp"
                        android:background="@drawable/down_arrow_icon_pro"
                        />
                    <ImageView
                        android:contentDescription="@string/comment_icon"
                        android:id="@+id/comment"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="83dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="390dp"
                        android:src="@drawable/comment_icon_pro"
                        />
                    <TextView
                        android:id="@+id/commentNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="386dp"
                        android:text="@string/comment_num"
                        android:textAppearance="@style/profle_detail"
                        />
                    <ImageView
                        android:contentDescription="@string/retweet_icon"
                        android:id="@+id/retweetIcon"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="149dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="390dp"
                        android:src="@drawable/retweet_stroke_icon_pro"
                        />
                    <TextView
                        android:id="@+id/retweetNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="166dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="386dp"
                        android:text="@string/retweet_num"
                        android:textAppearance="@style/profle_detail"
                        />
                    <ImageView
                        android:contentDescription="@string/heart_icon"
                        android:id="@+id/heartSolidIcon"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="215dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="390dp"
                        android:src="@drawable/heart_solid_icon_pro"
                        />
                    <TextView
                        android:id="@+id/likeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="232dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="386dp"
                        android:text="@string/tweet_likes"
                        android:textAppearance="@style/profle_detail"
                        />
                    <ImageView
                        android:contentDescription="@string/share_icon"
                        android:id="@+id/shareStrokeIcon"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="281dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="390dp"
                        android:src="@drawable/share_stroke_icon_pro"
                        />
                    <ImageView
                        android:contentDescription="@string/activity_icon"
                        android:id="@+id/activityIcon"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="360dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="390dp"
                        android:src="@drawable/activity_icon_pro"
                        />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>